@@ -1,4 +1,4 @@
-<bandcamp-header>Loading...</bandcamp-header>
+
   <p>
     <!--It seems as though my .css files are not loading into the server.  
     Nothing I do to any .css file makes any changes, and when I inspect the webpage, the .css files are not shown in my directory.
