@@ -34,3 +34,9 @@
 {
     outline: none;
 }
+
+.card-size
+{
+height: 540.38px;
+width: 1000.33px;
+}
