@@ -1,7 +1,7 @@
 
     <div class="card bg-dark text-white" style="width: 60rem;">
-        <img class="card-img card-brightness" src="assets/Main-Card.jpeg" alt="Card image">
-        <div class="card-img-overlay ">
+        <img class="card-size card-img card-brightness" src="assets/Main-Card.jpeg" alt="Card image">
+        <div class="card-img-overlay">
             <div class = "text-position">
           <h5 class="card-title" style="width: 18rem;">Exploring the Crossroads of Country and Soul</h5>
           <p class="card-text" >A roadmap of the genre courtesy of Brooks Long, Baltimore singer-songwriter and host of WTMD's "6 Degrees of Souls"</p>
