@@ -7,8 +7,8 @@
 
 .card-size
 {
-    width: "100";
-    height: "100";
+    width: 372.66px;
+    height: 179px;
 }
 
 .text-position {
