@@ -11,9 +11,9 @@
         </div>
         </div>
       </div><-->
-
-      <div class="card bg-dark text-white" style="width: 20rem;">
-        <img class="card-img card-brightness" src={{img}} alt="Card image">
+      
+      <div class=" card bg-dark text-white" style="width: 20rem;">
+        <img class="card-size card-img card-brightness" src={{img}} alt="Card image">
         <div class="card-img-overlay ">
             <div class = "text-position">
           <p class="card-title" style="width: 18rem;">{{head}}</p>
