@@ -1,0 +1,12 @@
+<nav class="navbar">
+  <div class="container" style="background-color: rgb(221, 221, 221)">
+    
+
+    <a class="navbar-brand" href="#">
+      <img  src="assets/bandcamp-logo.png" alt="" width="125">
+    </a>   
+
+    <div>
+  </div>
+  </div>
+</nav>
