@@ -1,0 +1,10 @@
+import { Component } from "@angular/core";
+
+@Component({
+    selector: 'bandcamp-header-2',
+    templateUrl: 'header-component-2.html',
+    styleUrls: ['header-component-2.css']
+})
+export class Header2Component {
+    
+}
