@@ -1,1 +1,23 @@
-<h1> LOGIN </h1>
+<bandcamp-header-2>
+    Loading...
+</bandcamp-header-2>
+<div>
+    Log in
+</div>
+
+....................................................
+<form>
+    <div class="form-group row">
+      <label for="staticEmail" class="col-sm-2 col-form-label">Username / email</label>
+      <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+      </div>
+      <button type="button" class="btn btn-outline-light">Log in</button>
+    </div>
+  </form>
